openapi schema add and generate
